// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFilesView should render correctly 1`] = `
<div
  id="source-files-container"
>
  <ProgressWrapper
    loading={true}
  >
    <div>
      <div
        className="download-all-wrapper clearfix"
      >
        <div
          className="pull-right"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsSize="small"
            bsStyle="info"
            disabled={false}
            onClick={[Function]}
            test-attr="down-all-btn"
          >
            <i
              className="glyphicon glyphicon-download-alt"
            />
             
            Download All
          </Button>
        </div>
      </div>
      <AccordionWrapper
        accordion={false}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "addItem": [Function],
              "removeItem": [Function],
              "setAccordion": [Function],
              "setExpanded": [Function],
              "setOnChange": [Function],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
          key="hello_world.py"
        >
          <AccordionItemTitleWrapper
            className="accordion__title accordion__title--animated"
            hideBodyClassName=""
          >
            <h5
              className="u-position-relative"
            >
              hello_world.py
              <div
                className="accordion__arrow"
                role="presentation"
              />
            </h5>
            <div />
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="clearfix"
            >
              <div
                className="pull-left upload-date"
              >
                Upload Date: 
              </div>
              <div
                className="pull-right"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsSize="xsmall"
                  bsStyle="default"
                  disabled={false}
                  onClick={[Function]}
                  test-attr="down-btn-hello_world.py"
                >
                  <i
                    className="glyphicon glyphicon-download-alt"
                  />
                   Download
                </Button>
              </div>
            </div>
            <SyntaxHighlighter
              language="python"
              style={
                Object {
                  ":not(pre) > code[class*=\\"language-\\"]": Object {
                    "background": "#2d2d2d",
                    "borderRadius": ".3em",
                    "padding": ".1em",
                    "whiteSpace": "normal",
                  },
                  "atrule": Object {
                    "color": "#cc99cd",
                  },
                  "attr-name": Object {
                    "color": "#e2777a",
                  },
                  "attr-value": Object {
                    "color": "#7ec699",
                  },
                  "block-comment": Object {
                    "color": "#999",
                  },
                  "bold": Object {
                    "fontWeight": "bold",
                  },
                  "boolean": Object {
                    "color": "#f08d49",
                  },
                  "builtin": Object {
                    "color": "#cc99cd",
                  },
                  "cdata": Object {
                    "color": "#999",
                  },
                  "char": Object {
                    "color": "#7ec699",
                  },
                  "class-name": Object {
                    "color": "#f8c555",
                  },
                  "code[class*=\\"language-\\"]": Object {
                    "MozHyphens": "none",
                    "MozTabSize": "4",
                    "OTabSize": "4",
                    "WebkitHyphens": "none",
                    "background": "none",
                    "color": "#ccc",
                    "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
                    "hyphens": "none",
                    "lineHeight": "1.5",
                    "msHyphens": "none",
                    "tabSize": "4",
                    "textAlign": "left",
                    "whiteSpace": "pre",
                    "wordBreak": "normal",
                    "wordSpacing": "normal",
                    "wordWrap": "normal",
                  },
                  "comment": Object {
                    "color": "#999",
                  },
                  "constant": Object {
                    "color": "#f8c555",
                  },
                  "deleted": Object {
                    "color": "#e2777a",
                  },
                  "doctype": Object {
                    "color": "#999",
                  },
                  "entity": Object {
                    "color": "#67cdcc",
                    "cursor": "help",
                  },
                  "function": Object {
                    "color": "#f08d49",
                  },
                  "function-name": Object {
                    "color": "#6196cc",
                  },
                  "important": Object {
                    "color": "#cc99cd",
                    "fontWeight": "bold",
                  },
                  "inserted": Object {
                    "color": "green",
                  },
                  "italic": Object {
                    "fontStyle": "italic",
                  },
                  "keyword": Object {
                    "color": "#cc99cd",
                  },
                  "namespace": Object {
                    "color": "#e2777a",
                  },
                  "number": Object {
                    "color": "#f08d49",
                  },
                  "operator": Object {
                    "color": "#67cdcc",
                  },
                  "pre[class*=\\"language-\\"]": Object {
                    "MozHyphens": "none",
                    "MozTabSize": "4",
                    "OTabSize": "4",
                    "WebkitHyphens": "none",
                    "background": "#2d2d2d",
                    "color": "#ccc",
                    "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
                    "hyphens": "none",
                    "lineHeight": "1.5",
                    "margin": ".5em 0",
                    "msHyphens": "none",
                    "overflow": "auto",
                    "padding": "1em",
                    "tabSize": "4",
                    "textAlign": "left",
                    "whiteSpace": "pre",
                    "wordBreak": "normal",
                    "wordSpacing": "normal",
                    "wordWrap": "normal",
                  },
                  "prolog": Object {
                    "color": "#999",
                  },
                  "property": Object {
                    "color": "#f8c555",
                  },
                  "punctuation": Object {
                    "color": "#ccc",
                  },
                  "regex": Object {
                    "color": "#7ec699",
                  },
                  "selector": Object {
                    "color": "#cc99cd",
                  },
                  "string": Object {
                    "color": "#7ec699",
                  },
                  "symbol": Object {
                    "color": "#f8c555",
                  },
                  "tag": Object {
                    "color": "#e2777a",
                  },
                  "url": Object {
                    "color": "#67cdcc",
                  },
                  "variable": Object {
                    "color": "#7ec699",
                  },
                }
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </div>
  </ProgressWrapper>
</div>
`;

exports[`SourceFilesView should render correctly 2`] = `
<div
  id="source-files-container"
>
  <ProgressWrapper
    loading={false}
  >
    <div>
      <div
        className="download-all-wrapper clearfix"
      >
        <div
          className="pull-right"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsSize="small"
            bsStyle="info"
            disabled={false}
            onClick={[Function]}
            test-attr="down-all-btn"
          >
            <i
              className="glyphicon glyphicon-download-alt"
            />
             
            Download All
          </Button>
        </div>
      </div>
      <AccordionWrapper
        accordion={false}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "addItem": [Function],
              "removeItem": [Function],
              "setAccordion": [Function],
              "setExpanded": [Function],
              "setOnChange": [Function],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
          key="hello_world.py"
        >
          <AccordionItemTitleWrapper
            className="accordion__title accordion__title--animated"
            hideBodyClassName=""
          >
            <h5
              className="u-position-relative"
            >
              hello_world.py
              <div
                className="accordion__arrow"
                role="presentation"
              />
            </h5>
            <div>
              /src/hello_world.py
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="clearfix"
            >
              <div
                className="pull-left upload-date"
              >
                Upload Date: 
                2017-11-27T08:52:18.562Z
              </div>
              <div
                className="pull-right"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsSize="xsmall"
                  bsStyle="default"
                  disabled={false}
                  onClick={[Function]}
                  test-attr="down-btn-hello_world.py"
                >
                  <i
                    className="glyphicon glyphicon-download-alt"
                  />
                   Download
                </Button>
              </div>
            </div>
            <SyntaxHighlighter
              language="python"
              style={
                Object {
                  ":not(pre) > code[class*=\\"language-\\"]": Object {
                    "background": "#2d2d2d",
                    "borderRadius": ".3em",
                    "padding": ".1em",
                    "whiteSpace": "normal",
                  },
                  "atrule": Object {
                    "color": "#cc99cd",
                  },
                  "attr-name": Object {
                    "color": "#e2777a",
                  },
                  "attr-value": Object {
                    "color": "#7ec699",
                  },
                  "block-comment": Object {
                    "color": "#999",
                  },
                  "bold": Object {
                    "fontWeight": "bold",
                  },
                  "boolean": Object {
                    "color": "#f08d49",
                  },
                  "builtin": Object {
                    "color": "#cc99cd",
                  },
                  "cdata": Object {
                    "color": "#999",
                  },
                  "char": Object {
                    "color": "#7ec699",
                  },
                  "class-name": Object {
                    "color": "#f8c555",
                  },
                  "code[class*=\\"language-\\"]": Object {
                    "MozHyphens": "none",
                    "MozTabSize": "4",
                    "OTabSize": "4",
                    "WebkitHyphens": "none",
                    "background": "none",
                    "color": "#ccc",
                    "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
                    "hyphens": "none",
                    "lineHeight": "1.5",
                    "msHyphens": "none",
                    "tabSize": "4",
                    "textAlign": "left",
                    "whiteSpace": "pre",
                    "wordBreak": "normal",
                    "wordSpacing": "normal",
                    "wordWrap": "normal",
                  },
                  "comment": Object {
                    "color": "#999",
                  },
                  "constant": Object {
                    "color": "#f8c555",
                  },
                  "deleted": Object {
                    "color": "#e2777a",
                  },
                  "doctype": Object {
                    "color": "#999",
                  },
                  "entity": Object {
                    "color": "#67cdcc",
                    "cursor": "help",
                  },
                  "function": Object {
                    "color": "#f08d49",
                  },
                  "function-name": Object {
                    "color": "#6196cc",
                  },
                  "important": Object {
                    "color": "#cc99cd",
                    "fontWeight": "bold",
                  },
                  "inserted": Object {
                    "color": "green",
                  },
                  "italic": Object {
                    "fontStyle": "italic",
                  },
                  "keyword": Object {
                    "color": "#cc99cd",
                  },
                  "namespace": Object {
                    "color": "#e2777a",
                  },
                  "number": Object {
                    "color": "#f08d49",
                  },
                  "operator": Object {
                    "color": "#67cdcc",
                  },
                  "pre[class*=\\"language-\\"]": Object {
                    "MozHyphens": "none",
                    "MozTabSize": "4",
                    "OTabSize": "4",
                    "WebkitHyphens": "none",
                    "background": "#2d2d2d",
                    "color": "#ccc",
                    "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
                    "hyphens": "none",
                    "lineHeight": "1.5",
                    "margin": ".5em 0",
                    "msHyphens": "none",
                    "overflow": "auto",
                    "padding": "1em",
                    "tabSize": "4",
                    "textAlign": "left",
                    "whiteSpace": "pre",
                    "wordBreak": "normal",
                    "wordSpacing": "normal",
                    "wordWrap": "normal",
                  },
                  "prolog": Object {
                    "color": "#999",
                  },
                  "property": Object {
                    "color": "#f8c555",
                  },
                  "punctuation": Object {
                    "color": "#ccc",
                  },
                  "regex": Object {
                    "color": "#7ec699",
                  },
                  "selector": Object {
                    "color": "#cc99cd",
                  },
                  "string": Object {
                    "color": "#7ec699",
                  },
                  "symbol": Object {
                    "color": "#f8c555",
                  },
                  "tag": Object {
                    "color": "#e2777a",
                  },
                  "url": Object {
                    "color": "#67cdcc",
                  },
                  "variable": Object {
                    "color": "#7ec699",
                  },
                }
              }
            >
              Hello World!
            </SyntaxHighlighter>
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </div>
  </ProgressWrapper>
</div>
`;
